Fix for bug: [ 2003616 ] Statblock sheet Ability count should be for visible. Enhancements to statblock 4, added output for ability special types Aura, Sense, Resistance, Immunity and Weakness. Filtered for type Natural on "possessions" output so natural weapons are not listed there.
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@6902 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock2.htm
+++ b/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock2.htm
@@ -82,8 +82,8 @@ Init |INITIATIVEMOD|
 |ENDFOR|
 |ENDIF|
 SA: 
-|IIF(count("ABILITIES";"CATEGORY=Special Ability";"VISIBILITY=HIDDEN[or]VISIBILITY=DISPLAY_ONLY")>0)|
-|FOR,%specialAbilities,0,count("ABILITIES","CATEGORY=Special Ability","VISIBILITY=HIDDEN[or]VISIBILITY=DISPLAY_ONLY")-1,1,0| 
+|IIF(count("ABILITIES";"CATEGORY=Special Ability";"VISIBILITY=DEFAULT[or]VISIBILITY=OUTPUT_ONLY")>0)|
+|FOR,%specialAbilities,0,count("ABILITIES","CATEGORY=Special Ability","VISIBILITY=DEFAULT[or]VISIBILITY=OUTPUT_ONLY")-1,1,0| 
 |IIF(ABILITYALL.Special Ability.VISIBLE.%specialAbilities.TYPE:Extraordinary)|
 |ABILITYALL.Special Ability.VISIBLE.%specialAbilities| (Ex), 
 |ELSE|
