FREQ: Flat-Footed and touch AC switched   - Merged from 5.14 r6958 Issue#: 1863879
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@6959 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/preview/d20/fantasy/statblock2.htm
+++ b/preview/d20/fantasy/statblock2.htm
@@ -63,8 +63,7 @@ vp |HP|; wp |ALTHP|;
 |ENDIF|
 Init |INITIATIVEMOD| 
 (|STAT.1.MOD| Dex, |INITIATIVEBONUS| Misc); Spd |MOVEMENT|; AC 
-|AC.Total| (flatfooted |AC.Flatfooted|, touch
-|AC.Touch|), 
+|AC.Total| (touch |AC.Touch|, flatfooted |AC.Flatfooted|), 
 |FOR,%weap,0,COUNT[EQTYPE.WEAPON]-2,1,0|
 |IIF(WEAPON.%weap.BASEHIT:N/A)|
 |WEAPON.%weap.NAME| |WEAPON.%weap.THHIT| |WEAPON.%weap.TYPE| (|WEAPON.%weap.THDAMAGE| |WEAPON.%weap.CRIT|/x|WEAPON.%weap.MULT| |WEAPON.%weap.HAND| |WEAPON.%weap.SIZE| |WEAPON.%weap.SPROP| |WEAPON.%weap.NOTE|) or 
