--- a/preview/d20/modern/statblock1.htm
+++ b/preview/d20/modern/statblock1.htm
@@ -48,7 +48,7 @@ $Date$
   </tr>
   <tr valign="top">
     <td width="25%"><b>Defense: </b></td>
-    <td width="75%">|AC.Total| (flatfooted |AC.Flatfooted|, touch |AC.Touch|)</td>
+    <td width="75%">|AC.Total| (touch |AC.Touch|, flatfooted |AC.Flatfooted|)</td>
   </tr>
   <tr valign="top">
     <td width="25%"><b>Attacks: </b></td>
