Add latest change
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@7244 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/installers/release-notes/pcgen-release-notes-5150.html
+++ b/installers/release-notes/pcgen-release-notes-5150.html
@@ -272,6 +272,7 @@ Please give it a shot and let us know how it works for you.
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=1984035">1984035</a> ]	UI Doesn&#039;t properly sort Skills</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2011540">2011540</a> ]	Odd names in spelllist chooser</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2011560">2011560</a> ]	Spells tab blank</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2029117">2029117</a> ]	BONUS to a list of stats does not show on output</li>
 </ul>
 
 <h3>Data Bugs</h3>
