Add latest change
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@7251 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/installers/release-notes/pcgen-release-notes-5150.html
+++ b/installers/release-notes/pcgen-release-notes-5150.html
@@ -188,7 +188,9 @@ Please give it a shot and let us know how it works for you.
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2005321">2005321</a> ]	DEFAULTDATASET miscinfo.lst tag</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2005322">2005322</a> ]	Remember what datasets I have loaded in each gameMode</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2016413">2016413</a> ]	[Pathfinder] Experience point tables</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2022996">2022996</a> ]	Enhance PRECAMPAIGN to use pcc BOOKTYPE data</li>
 </ul>
+
 
 <h3>Data Feature Requests</h3>
 
