Update for recent bug fixes, and clarify language
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@7676 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/installers/release-notes/pcgen-release-notes-5152.html
+++ b/installers/release-notes/pcgen-release-notes-5152.html
@@ -169,18 +169,18 @@ Please give it a shot and let us know how it works for you.
 
 		<h2><a name="ChangeLog">Change Log for 5.15.2</a></h2>
 <h3>New Data Source Development</h3>
-
+<li>*These are available as OOC (Out Of Cycle) downloads, they will be part of the regular distribution sets in the near future</li>
 <ul>
-<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=1967459">1967459</a> ]	[Mongoose] Quintessential Ranger II </li>
-<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=1974382">1974382</a> ]	[Mongoose] Quintessential Ranger</li>
-<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2000813">2000813</a> ]	 [Paizo] Rise of the Runelords - Chapter 2</li>
-<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2005931">2005931</a> ]	[Paizo] Curse of the Crimson Throne - Player&#039;s Guide</li>
-<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2005932">2005932</a> ]	[Paizo] Curse of the Crimson Throne: Chapter 1</li>
-<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2005934">2005934</a> ]	[Paizo] Curse of the Crimson Throne: Chapter 2</li>
-<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2006359">2006359</a> ]	[Paizo]Rise of the Runelords Chapter 3</li>
-<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2028773">2028773</a> ]	[Paizo] Rise of the Rune Lords - Chap 5</li>
-<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2028775">2028775</a> ]	[Paizo] Rise of the Rune Lords - Chap 6</li>
-<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2034612">2034612</a> ]	[Paizo]Rise of the Runelords Chapter 4</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=1967459">1967459</a> ]	*[Mongoose] Quintessential Ranger II </li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=1974382">1974382</a> ]	*[Mongoose] Quintessential Ranger</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2000813">2000813</a> ]	*[Paizo] Rise of the Runelords - Chapter 2</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2005931">2005931</a> ]	*[Paizo] Curse of the Crimson Throne - Player&#039;s Guide</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2005932">2005932</a> ]	*[Paizo] Curse of the Crimson Throne: Chapter 1</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2005934">2005934</a> ]	*[Paizo] Curse of the Crimson Throne: Chapter 2</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2006359">2006359</a> ]	*[Paizo]Rise of the Runelords Chapter 3</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2028773">2028773</a> ]	*[Paizo] Rise of the Rune Lords - Chap 5</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2028775">2028775</a> ]	*[Paizo] Rise of the Rune Lords - Chap 6</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2034612">2034612</a> ]	*[Paizo]Rise of the Runelords Chapter 4</li>
 </ul>
 
 <h3>Code Feature Requests</h3>
@@ -222,9 +222,10 @@ Please give it a shot and let us know how it works for you.
 
 <ul>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2058606">2058606</a> ]	[5.15.0] BASE_ITEM not being set in equipment customizer</li>
-<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2059135">2059135</a> ]	ABILITY lost capability to use SUBSET Ability Categories</li>
-<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2065591">2065591</a> ]	ABILITYCATEGORY definition remains unclear</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2059135">2059135</a> ]	[5.15.1] ABILITY lost capability to use SUBSET Ability Cats</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2063650">2063650</a> ]	[5.15.1] VFEAT Lost respect for PRExxx</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2068990">2068990</a> ]	[5.15.1] TEMPLATE:CHOOSE broken for Ghost Special Attacks</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2097883">2097883</a> ]	[5.15.1] Removing Template fails to remove Child Templates</li>
 </ul>
 
 <h3>Data Bugs</h3>
@@ -234,6 +235,7 @@ Please give it a shot and let us know how it works for you.
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2047328">2047328</a> ]	psion, power, mindlink missing </li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2071796">2071796</a> ]	typo in curse_of_the_crimson_thrown_players_guide</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2086576">2086576</a> ]	curse_of_the_crimson_thrown_players_guide bad folder</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2099064">2099064</a> ]	Rod of Lordly Might has wrong Bonus</li>
 </ul>
 
 <h3>Documentation Bugs</h3>
@@ -242,6 +244,5 @@ Please give it a shot and let us know how it works for you.
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2061851">2061851</a> ]	CHOOSE:SPELLS|ANY[KNOWN=YES] invalid at this time</li>
 
 </ul>
-
 	</body>
 </html>
