--- a/installers/mac-installer/instructions.html
+++ b/installers/mac-installer/instructions.html
@@ -212,12 +212,11 @@
 		<ol style="list-style-type: upper-alpha">
 			<li>Launch /Developer/Applications/Utilities/PackageMaker</li>
 			<li>On the Installer Interface tab, fill in relevant information for the Title and Description 
-				fields (I usually just grab the PCGen boiler plate from the website for the Description field).
-				<blockquote>PCGen is a character generator for role-playing games. It currently is aimed 
-					at supporting as many RPGs as is humanly possible. The project's current focus is on OGL games 
-					(OGL is Wizards of the Coast's Open Gaming License). PCGen runs on Windows, Solaris, Mac OS X, 
-					and Unix/Linux using Java 1.5.</blockquote>
-			</li>
+				fields (I usually just grab the PCGen boiler plate from the website for the Description field):
+				&quot;PCGen is a character generator for role-playing games. It currently is aimed at supporting 
+				as many RPGs as is humanly possible. The project's current focus is on OGL games (OGL is Wizards 
+				of the Coast's Open Gaming License). PCGen runs on Windows, Solaris, Mac OS X, and Unix/Linux 
+				using Java 1.5.&quot;</li>
 			<li>Click the Show Installer Interface Editor, for the background choose Custom background and 
 			navigate to the /mac-installer/graphics/Installer_Background.tif image.</li>
 			<li>Unstuff the mac-installer/text/Welcome.rtfd.zip file, it's stuffed because the file is really 
