Support for PsiLike ability indicator
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@7776 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock4.htm
+++ b/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock4.htm
@@ -6,9 +6,9 @@
 	This format is designed to match the official WotC Statblock style 
 	as defined in the 3.5 Edition DMG (II)
 
-$Revision: 1.6 $
-$Author: eddyanthony $
-$Date: 2007/03/01 23:16:07 $
+$Revision$
+$Author$
+$Date$
 
 -->
 <style type="text/css">
@@ -475,6 +475,9 @@ at will)
 |ENDIF|
 |IIF(ABILITYALL.Special Ability.VISIBLE.%allAbilities.TYPE:SpellLike)|
  (Sp)
+|ENDIF|
+|IIF(ABILITYALL.Special Ability.VISIBLE.%allAbilities.TYPE:PsiLike)|
+ (Ps)
 |ENDIF|
 </b> |ABILITYALL.Special Ability.VISIBLE.%allAbilities.DESC|</p>
 |ENDFOR|
