--- a/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_std.htm
+++ b/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_std.htm
@@ -2011,6 +2011,9 @@ Wisdom
 |IIF(ABILITYALL.Special Ability.VISIBLE.%specialAttack.TYPE=SpecialAttack.TYPE:SpellLike)|
  (Sp)
 |ENDIF|
+|IIF(ABILITYALL.Special Ability.VISIBLE.%specialAttack.TYPE=SpecialAttack.TYPE:PsiLike)|
+ (Ps)
+|ENDIF|
 	 </td>
      <td valign="top" align="left" class="font8">|ABILITYALL.Special Ability.VISIBLE.%specialAttack.TYPE=SpecialAttack.DESC|</td>
     </tr>
@@ -2039,6 +2042,9 @@ Wisdom
 |ENDIF|
 |IIF(ABILITYALL.Special Ability.VISIBLE.%specialQuality.TYPE=SpecialQuality.TYPE:SpellLike)|
  (Sp)
+|ENDIF|
+|IIF(ABILITYALL.Special Ability.VISIBLE.%specialQuality.TYPE=SpecialQuality.TYPE:PsiLike)|
+ (Ps)
 |ENDIF|
 	 </td>
      <td valign="top" align="left" class="font8">|ABILITYALL.Special Ability.VISIBLE.%specialQuality.TYPE=SpecialQuality.DESC|</td>
