--- a/preview/d20/fantasy/statblock_SRD.htm
+++ b/preview/d20/fantasy/statblock_SRD.htm
@@ -271,7 +271,11 @@ melee
 |IIF(ABILITYALL.Special Ability.%specialAbilities.TYPE:SpellLike)|
 |ABILITYALL.Special Ability.%specialAbilities| (Sp), 
 |ELSE|
+|IIF(ABILITYALL.Special Ability.%specialAbilities.TYPE:PsiLike)|
+|ABILITYALL.Special Ability.%specialAbilities| (Ps), 
+|ELSE|
 |ABILITYALL.Special Ability.%specialAbilities|, 
+|ENDIF|
 |ENDIF|
 |ENDIF|
 |ENDIF|
