Add latest trackers
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@7779 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/installers/release-notes/pcgen-release-notes-5153.html
+++ b/installers/release-notes/pcgen-release-notes-5153.html
@@ -34,6 +34,7 @@ experimentation and testing of our latest work.
 Please give it a shot and let us know how it works for you. 
 		 Some notable changes in this release are listed below.</p>
 <ul>
+<li><img alt="add" title="add" src="http://pcgen.sourceforge.net/autobuilds/images/add.gif"> [4E] ASPECT tag for Abilities and Feats. Fixes <a href="http://sourceforge.net/support/tracker.php?aid=2038169">2038169</a> (<a href="http://pcgen.sourceforge.net/autobuilds/team-list.html#jdempsey">jdempsey</a>)</li>
 </ul>
 <p><i>James Dempsey</i> for the PCGEN Team -- 23 September, 2008.</p>
 
@@ -192,6 +193,13 @@ Please give it a shot and let us know how it works for you.
 
 <ul>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=1375795">1375795</a> ]	[Bastion Press] Faeries cleanup</li>
+
+</ul>
+
+<h3>Documentation Bugs</h3>
+
+<ul>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2100528">2100528</a> ]	Add note to ADD: Docs about Fire and Forget</li>
 
 </ul>
 
